--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "hashbow": "^1.1.1",
     "immutable": "^4.0.0-rc.9",
     "raj": "0.0.10",
     "raj-react": "0.0.4",
@@ -11,9 +12,15 @@
   },
   "devDependencies": {
     "browserify": "^16.1.0",
-    "browserify-incremental": "^3.1.1"
+    "browserify-incremental": "^3.1.1",
+    "scssify": "^3.0.1"
+  },
+  "browserify": {
+    "transform": [
+      "scssify"
+    ]
   },
   "scripts": {
-    "watch": "ls *.js | entr browserifyinc -vd app.js -o bundle.js"
+    "watch": "ls data.js app.js style.scss | entr browserifyinc -vd app.js -o bundle.js"
   }
 }
