--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,11 @@
     "hashbow": "^1.1.1",
     "history": "^4.7.2",
     "immutable": "^4.0.0-rc.9",
-    "mousetrap": "^1.6.1",
     "raj": "0.0.10",
     "raj-react": "0.0.4",
     "raj-spa": "0.0.12",
     "react": "^16.2.0",
+    "react-click-outside": "^3.0.1",
     "react-dom": "^16.2.0",
     "react-grid-layout": "^0.16.4",
     "react-hyperscript": "^3.1.0",
