--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,13 @@
     "raj-react": "0.0.4",
     "raj-spa": "0.0.12",
     "react": "^16.2.0",
+    "react-autosuggest": "^9.3.4",
     "react-click-outside": "^3.0.1",
     "react-dom": "^16.2.0",
     "react-grid-layout": "^0.16.4",
     "react-hyperscript": "^3.1.0",
+    "react-input-autosize": "^2.2.1",
+    "react-tagsinput": "^3.19.0",
     "tagmeme": "0.0.6"
   },
   "devDependencies": {
