--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "raj-react": "0.0.4",
     "raj-spa": "0.0.12",
     "react": "^16.2.0",
+    "react-autosize-textarea": "^3.0.2",
     "react-autosuggest": "^9.3.4",
     "react-click-outside": "^3.0.1",
     "react-dnd": "^2.5.4",
