--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^16.2.0",
     "react-hyperscript": "^3.1.0",
     "react-input-autosize": "^2.2.1",
+    "react-select": "^1.2.1",
     "react-tagsinput": "^3.19.0",
+    "react-tangle-text": "^2.4.0",
     "starts-with": "^1.0.2",
     "tagmeme": "0.0.6"
   },
