--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "history": "^4.7.2",
     "immutable": "^4.0.0-rc.9",
     "intersperse": "^1.0.0",
+    "mousetrap": "^1.6.1",
     "raj": "0.0.10",
     "raj-react": "0.0.4",
     "raj-spa": "0.0.12",
